Apple Silicon: crash when creating hair particle system #97835

Closed
opened 2022-05-04 10:08:37 +02:00 by cheng-kai Hsiung · 7 comments

System Information
Operating system: macOS-12.3.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3

Blender Version
Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-03 21:08, hash: e86b62f195
Worked: (newest version of Blender that worked as expected)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error

  1. particle hair systems will crushed blender, old file with the old hair systems can not be open.

  2. on 3.2 if you try to Create a Hair particle hair systems, blender will just crush,
    thats how you recreate this bug

im on Macbook pro M1MAX / MacOS Monterey 12.3.1

Bug Blender version : 3.2_e86b62f1951b_Apple Silicon
The last Blender version which worked : 3.1_2cfca7d9101d_Apple Silicon ( or older)
Blender_3.2_Debug.zip

**System Information** Operating system: macOS-12.3.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3 **Blender Version** Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-03 21:08, hash: `e86b62f195` Worked: (newest version of Blender that worked as expected) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** 1. particle hair systems will crushed blender, old file with the old hair systems can not be open. 2. on 3.2 if you try to Create a Hair particle hair systems, blender will just crush, thats how you recreate this bug im on Macbook pro M1MAX / MacOS Monterey 12.3.1 Bug Blender version : 3.2_e86b62f1951b_Apple Silicon The last Blender version which worked : 3.1_2cfca7d9101d_Apple Silicon ( or older) [Blender_3.2_Debug.zip](https://archive.blender.org/developer/F13050713/Blender_3.2_Debug.zip)

Added subscriber: @NENGHUO

Added subscriber: @NENGHUO
Germano Cavalcante changed title from 3.2_e86b62f1951b_Apple Silicon :particle hair systems wall are crushed blender to Apple Silicon: crash when creating hair particle system 2022-05-05 00:04:48 +02:00

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm both crashes with the same error message:

ERROR (gpu.shader): hair_refine_shader_transform_feedback_workaround_create FragShader: 
      | 
   54 |   fragColor = finalColor;
      | 
      | gpu_shader_3D_smooth_color_frag.glsl:5:0: Error: Use of undeclared identifier 'fragColor'
      | gpu_shader_3D_smooth_color_frag.glsl:5:0: Error: Use of undeclared identifier 'finalColor'
      | 
   55 |   fragColor = blender_srgb_to_framebuffer_space(fragColor);
      | 
      | gpu_shader_3D_smooth_color_frag.glsl:6:0: Error: Use of undeclared identifier 'fragColor'
      | gpu_shader_3D_smooth_color_frag.glsl:6:0: Error: Use of undeclared identifier 'fragColor'

@fclem, does this ring a bell?

I can confirm both crashes with the same error message: ``` ERROR (gpu.shader): hair_refine_shader_transform_feedback_workaround_create FragShader: | 54 | fragColor = finalColor; | | gpu_shader_3D_smooth_color_frag.glsl:5:0: Error: Use of undeclared identifier 'fragColor' | gpu_shader_3D_smooth_color_frag.glsl:5:0: Error: Use of undeclared identifier 'finalColor' | 55 | fragColor = blender_srgb_to_framebuffer_space(fragColor); | | gpu_shader_3D_smooth_color_frag.glsl:6:0: Error: Use of undeclared identifier 'fragColor' | gpu_shader_3D_smooth_color_frag.glsl:6:0: Error: Use of undeclared identifier 'fragColor' ``` @fclem, does this ring a bell?

@mano-wii Yes! This is the only shaders that have not been ported to ShaderCreateInfo. Want to take care of it?

@mano-wii Yes! This is the only shaders that have not been ported to `ShaderCreateInfo`. Want to take care of it?

This issue was referenced by adbe71c3fa

This issue was referenced by adbe71c3fabab78985b1fa71a79fc2c03d73f939

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-05-05 02:43:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97835
No description provided.